vlib/v/checker/tests/generic_parameter_on_method.vv
struct Type<T> {
	value T
}

struct ContainerType<T> {
	typ &Type<T>
}

fn (instance &ContainerType<T>) contains(typ Type<T>) {
	println(typ)
}

fn main() {
	con := ContainerType<int>{typ: &Type<int>{0}}
	con.contains(con.typ)
	println(con)
}
